--- a/training.html
+++ b/training.html
@@ -7,6 +7,15 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Test</h1>
+    <h1>Day la task2</h1>
+    <div>TASK222222</div>
+    <div>TASK222222</div>
+    <div>TASK222222</div>
+    <div>TASK222222</div>
+    <div>TASK222222</div>
+    <div>TASK222222</div>
+    <div>TASK222222</div>
+    <div>TASK222222</div>
+
 </body>
 </html>
