--- a/training.html
+++ b/training.html
@@ -7,6 +7,14 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Day la test 3</h1>
+    <h1>Day la task1</h1>
+    <div>task1</div>
+    <div>task1</div>
+    <div>task1</div>
+    <div>task1</div>
+    <div>task1</div>
+    <div>task1</div>
+    <div>task1</div>
+    <div>task1</div>
 </body>
 </html>
